<resources>
    <string name="app_name">GamingNetwork</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="cancelar">Fechar Aplicação</string>
    <string name="abrir">Abrir Inquerito</string>
    <string name="ed_enq">Editar Inquerito</string>
    <string name="texto">Preencha o seguinte inquerito :</string>
    <string name="nome">Nome :</string>
    <string name="in_nome">Introduza o seu nome</string>
    <string name="e_mail">E-mail :</string>
    <string name="in_email">Introduza o seu e-mail</string>
    <string name="data">Data de nacimento :</string>
    <string name="clique">Clique</string>
    <string name="jogos">Jogos Preferidos :</string>
    <string name="in_jogos">Introduza o jogo/jogos</string>
    <string name="salvar_dados">Salvar Dados</string>
    <string name="Cancelar">cancelar</string>
    <string name="nome_img">nome</string>
    <string name="email">email_img</string>
    <string name="data_img">data_img</string>
    <string name="jogos_img">jogos_img</string>
    <string name="informaçao">Parabéns vocè completou o registo para editar introduza o seu e-mail :</string>
    <string name="informaçao2">Caso seja o administrador digite a senha para ver ou editar todos os inqueritos :</string>
    <string name="senha">Senha :</string>
    <string name="senha_ed">Introduza a senha</string>
    <string name="senha_img">senha_img</string>
    <string name="continuar">Continuar</string>
    <string name="continuar2">Continuar</string>
    <string name="erro">Erro</string>
    <string name="inserir">Inserir</string>
    <string name="alterar">Alterar</string>
    <string name="eliminar">Eliminar</string>
</resources>
